--- a/README
+++ b/README
@@ -14,9 +14,9 @@ Build requirements:
 (besides corresponding -devel packages)
   binutils-20080624-2
   cmake-2.6.2-3
-  cygport-0.4.2-1
+  cygport-0.4.3-1
   gcc-core-3.4.4-3
-  make-3.81-1
+  make-3.81-2
   pkg-config-0.23a-2
 
 Canonical website:
@@ -28,26 +28,26 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gtk2.0-engines-qtcurve-0.61.2-X-src.tar.bz2
+  unpack gtk2.0-engines-qtcurve-0.61.4-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gtk2.0-engines-qtcurve-0.61.2-X.cygport all
+  cygport ./gtk2.0-engines-qtcurve-0.61.4-X.cygport all
 
 This will create:
-  /usr/src/gtk2.0-engines-qtcurve-0.61.2-X-src.tar.bz2
-  /usr/src/gtk2.0-engines-qtcurve-0.61.2-X.tar.bz2
+  /usr/src/gtk2.0-engines-qtcurve-0.61.4-X-src.tar.bz2
+  /usr/src/gtk2.0-engines-qtcurve-0.61.4-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/lib/gtk-2.0/2.10.0/engines/cygqtcurve.dll
-  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.2/AUTHORS
-  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.2/COPYING
-  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.2/ChangeLog
-  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.2/README
-  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.2/TODO
+  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.4/AUTHORS
+  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.4/COPYING
+  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.4/ChangeLog
+  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.4/README
+  /usr/share/doc/gtk2.0-engines-qtcurve-0.61.4/TODO
   /usr/share/themes/QtCurve/gtk-2.0/gtkrc
   /usr/share/themes/QtCurve/gtk-2.0/icons3
   /usr/share/themes/QtCurve/gtk-2.0/icons4
@@ -60,6 +60,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 0.61.4-1 -----
+Version bump.
 
 ----- version 0.61.2-1 -----
 Initial release for Cygwin.
