--- a/README
+++ b/README
@@ -3,18 +3,19 @@ gtk2.0-engines-qtcurve
 A matching set of widget theme engines for GTK2, Qt3, and Qt4.
 
 Runtime requirements:
-  cygwin-1.7.1-1
-  libcairo2-1.8.8-1
+  cygwin-1.7.5-1
+  libcairo2-1.8.10-1
   libgcc1-4.3.4-3
-  libgdk_pixbuf2.0_0-2.18.3-1
-  libglib2.0_0-2.22.2-1
-  libgtk2.0_0-2.18.3-1
+  libgdk_pixbuf2.0_0-2.18.6-1
+  libglib2.0_0-2.22.4-2
+  libgtk2.0_0-2.18.6-1
+  libX11_6-1.3.3-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  binutils-2.19.51-1
+  binutils-2.20.51-1
   cmake-2.8.0-11
-  cygport-0.9.80-1
+  cygport-0.9.83-1
   gcc4-core-4.3.4-3
   make-3.81-2
   pkg-config-0.23b-10
@@ -28,19 +29,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gtk2.0-engines-qtcurve-1.0.1-X-src.tar.bz2
+  unpack gtk2.0-engines-qtcurve-1.3.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gtk2.0-engines-qtcurve-1.0.1-X.cygport all
+  cygport ./gtk2.0-engines-qtcurve-1.3.0-X.cygport all
 
 This will create:
-  /usr/src/gtk2.0-engines-qtcurve-1.0.1-X-src.tar.bz2
-  /usr/src/gtk2.0-engines-qtcurve-1.0.1-X.tar.bz2
+  /usr/src/gtk2.0-engines-qtcurve-1.3.0-X-src.tar.bz2
+  /usr/src/gtk2.0-engines-qtcurve-1.3.0-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 1.3.0-1 -----
+Version bump.
 
 ----- version 1.0.1-1 -----
 Version bump.
